--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ var _hmt = _hmt || [];
 			
 			    
 	  <P>
-			 <li><a href="http://mxbyv.lsj.rjxapp.com"><span style="color:#2F0000">学习资料，三年高考</span></a></li>	 
+			 <li><a href="http://ymijy.lsj.rjxapp.com"><span style="color:#2F0000">学习资料，三年高考</span></a></li>	 
 
 
  
